--- a/src/main/resources/com/xdavide9/calculator/calculatorSimple.fxml
+++ b/src/main/resources/com/xdavide9/calculator/calculatorSimple.fxml
@@ -98,32 +98,32 @@
             </Button>
             <Button fx:id="plusButton" mnemonicParsing="false" onAction="#onOperationPressed" prefHeight="105.0" prefWidth="131.0" text="+" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <font>
-                  <Font name="Verdana Bold" size="20.0" />
+                  <Font name="Verdana" size="20.0" />
                </font>
             </Button>
             <Button fx:id="minusButton" mnemonicParsing="false" onAction="#onOperationPressed" prefHeight="124.0" prefWidth="123.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="2">
                <font>
-                  <Font name="Verdana Bold" size="20.0" />
+                  <Font name="Verdana" size="20.0" />
                </font>
             </Button>
             <Button fx:id="timesButton" mnemonicParsing="false" onAction="#onOperationPressed" prefHeight="106.0" prefWidth="102.0" text="*" GridPane.columnIndex="3" GridPane.rowIndex="3">
                <font>
-                  <Font name="Verdana Bold" size="20.0" />
+                  <Font name="Verdana" size="20.0" />
                </font>
             </Button>
             <Button fx:id="divideButton" mnemonicParsing="false" onAction="#onOperationPressed" prefHeight="95.0" prefWidth="106.0" text="/" GridPane.columnIndex="3" GridPane.rowIndex="4">
                <font>
-                  <Font name="Verdana Bold" size="20.0" />
+                  <Font name="Verdana" size="20.0" />
                </font>
             </Button>
             <Button fx:id="equalsButton" mnemonicParsing="false" onAction="#onEqualsPressed" prefHeight="125.0" prefWidth="157.0" text="=" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <font>
-                  <Font name="Verdana Bold" size="20.0" />
+                  <Font name="Verdana" size="20.0" />
                </font>
             </Button>
             <Button fx:id="pointButton" mnemonicParsing="false" onAction="#onPointPressed" prefHeight="110.0" prefWidth="158.0" text="." GridPane.rowIndex="4">
                <font>
-                  <Font name="Verdana Bold" size="20.0" />
+                  <Font name="Verdana" size="20.0" />
                </font>
             </Button>
          </children>
