improve code tidiness

--- a/src/main/resources/com/xdavide9/calculator/calculatorSimple.fxml
+++ b/src/main/resources/com/xdavide9/calculator/calculatorSimple.fxml
@@ -96,22 +96,22 @@
                   <Font name="Verdana Italic" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="plusButton" mnemonicParsing="false" onAction="#onOperationPressed" prefHeight="105.0" prefWidth="131.0" text="+" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <Button fx:id="plusButton" mnemonicParsing="false" onAction="#onMemoryOperationPressed" prefHeight="105.0" prefWidth="131.0" text="+" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="minusButton" mnemonicParsing="false" onAction="#onOperationPressed" prefHeight="124.0" prefWidth="123.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="2">
+            <Button fx:id="minusButton" mnemonicParsing="false" onAction="#onMemoryOperationPressed" prefHeight="124.0" prefWidth="123.0" text="-" GridPane.columnIndex="3" GridPane.rowIndex="2">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="timesButton" mnemonicParsing="false" onAction="#onOperationPressed" prefHeight="106.0" prefWidth="102.0" text="*" GridPane.columnIndex="3" GridPane.rowIndex="3">
+            <Button fx:id="timesButton" mnemonicParsing="false" onAction="#onMemoryOperationPressed" prefHeight="106.0" prefWidth="102.0" text="*" GridPane.columnIndex="3" GridPane.rowIndex="3">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="divideButton" mnemonicParsing="false" onAction="#onOperationPressed" prefHeight="95.0" prefWidth="106.0" text="/" GridPane.columnIndex="3" GridPane.rowIndex="4">
+            <Button fx:id="divideButton" mnemonicParsing="false" onAction="#onMemoryOperationPressed" prefHeight="95.0" prefWidth="106.0" text="/" GridPane.columnIndex="3" GridPane.rowIndex="4">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
