--- a/src/main/resources/com/xdavide9/calculator/calculatorComplex.fxml
+++ b/src/main/resources/com/xdavide9/calculator/calculatorComplex.fxml
@@ -26,52 +26,52 @@
           <RowConstraints minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="reciprocalButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="117.0" prefWidth="86.0" text="1/x" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Button fx:id="reciprocalButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="117.0" prefWidth="86.0" text="1/x" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="atanButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="129.0" prefWidth="110.0" text="atan" GridPane.rowIndex="3">
+            <Button fx:id="atanButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="129.0" prefWidth="110.0" text="atan" GridPane.rowIndex="3">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="tanButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="119.0" prefWidth="106.0" text="tan" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Button fx:id="tanButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="119.0" prefWidth="106.0" text="tan" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="logBaseNButton" mnemonicParsing="false" onAction="#onOperationPressed" prefHeight="119.0" prefWidth="104.0" text="logb" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <Button fx:id="logBaseNButton" mnemonicParsing="false" onAction="#onMemoryOperationPressed" prefHeight="119.0" prefWidth="104.0" text="logb" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="acosButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="91.0" prefWidth="93.0" text="acos" GridPane.rowIndex="2">
+            <Button fx:id="acosButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="91.0" prefWidth="93.0" text="acos" GridPane.rowIndex="2">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="cosButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="113.0" prefWidth="103.0" text="cos" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Button fx:id="cosButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="113.0" prefWidth="103.0" text="cos" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="lnButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="106.0" prefWidth="101.0" text="ln" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Button fx:id="lnButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="106.0" prefWidth="101.0" text="ln" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="asinButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="103.0" prefWidth="111.0" text="asin" GridPane.rowIndex="1">
+            <Button fx:id="asinButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="103.0" prefWidth="111.0" text="asin" GridPane.rowIndex="1">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="sinButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="87.0" prefWidth="104.0" text="sin" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button fx:id="sinButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="87.0" prefWidth="104.0" text="sin" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="logButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="78.0" prefWidth="110.0" text="log" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Button fx:id="logButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="78.0" prefWidth="110.0" text="log" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
@@ -86,7 +86,7 @@
                   <Font name="Verdana Italic" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="percentButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="101.0" prefWidth="144.0" text="\%" GridPane.columnIndex="1">
+            <Button fx:id="percentButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="101.0" prefWidth="144.0" text="\%" GridPane.columnIndex="1">
                <font>
                   <Font name="Verdana Italic" size="20.0" />
                </font>
@@ -96,32 +96,32 @@
                   <Font name="Verdana Italic" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="toThePowerOfTwoButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="105.0" prefWidth="131.0" text="x²" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <Button fx:id="toThePowerOfTwoButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="105.0" prefWidth="131.0" text="x²" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="toThePowerOfNButton" mnemonicParsing="false" onAction="#onOperationPressed" prefHeight="124.0" prefWidth="123.0" text="xⁿ" GridPane.columnIndex="3" GridPane.rowIndex="2">
+            <Button fx:id="toThePowerOfNButton" mnemonicParsing="false" onAction="#onMemoryOperationPressed" prefHeight="124.0" prefWidth="123.0" text="xⁿ" GridPane.columnIndex="3" GridPane.rowIndex="2">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="radicalTwoButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="106.0" prefWidth="102.0" text="√x" GridPane.columnIndex="3" GridPane.rowIndex="3">
+            <Button fx:id="radicalTwoButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="106.0" prefWidth="102.0" text="√x" GridPane.columnIndex="3" GridPane.rowIndex="3">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="radicalNButton" mnemonicParsing="false" onAction="#onOperationPressed" prefHeight="95.0" prefWidth="106.0" text="ⁿ√x" GridPane.columnIndex="3" GridPane.rowIndex="4">
+            <Button fx:id="radicalNButton" mnemonicParsing="false" onAction="#onMemoryOperationPressed" prefHeight="95.0" prefWidth="106.0" text="ⁿ√x" GridPane.columnIndex="3" GridPane.rowIndex="4">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="radicalThreeButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="125.0" prefWidth="157.0" text="³√x" GridPane.columnIndex="2" GridPane.rowIndex="4">
+            <Button fx:id="radicalThreeButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="125.0" prefWidth="157.0" text="³√x" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="factorialButton" mnemonicParsing="false" onAction="#onMoreOperationPressed" prefHeight="110.0" prefWidth="158.0" text="x!" GridPane.rowIndex="4">
+            <Button fx:id="factorialButton" mnemonicParsing="false" onAction="#onInstantOperationPressed" prefHeight="110.0" prefWidth="158.0" text="x!" GridPane.rowIndex="4">
                <font>
                   <Font name="Verdana" size="20.0" />
                </font>
